# OBS-Graphics-Studio-Pro

./: CMakeLists.txt  README.md  build-windows.ps1
data/icons/: README.md
data/locale/: en-US.ini
docs/: alt-side-handle-resize-fix.md  canvas-rulers-guides.md  live-edit-properties-panel.md  module-architecture.md  obs-theme-gui-audit.md  rich-text-redesign-audit.md  scene-mask-foreground-activation.md  stability-performance-audit.md
src/: title-assets.h  title-data.cpp  title-data.h  title-dock.cpp  title-editor.cpp  title-editor.h  title-rich-text.h  title-source.cpp
src/canvas/: README.md  canvas-preview.cpp  canvas-preview.h
src/core/: README.md  title-data.cpp  title-data.h  title-localization.h  title-preferences.cpp  title-preferences.h
src/editor/: README.md  properties-panel.cpp  properties-panel.h  timecode-spinbox.cpp  timecode-spinbox.h  title-assets.h  title-dock.cpp  title-dock.h  title-editor-internal.h  title-editor.cpp  title-editor.h  title-hotkeys.cpp  title-hotkeys.h
src/effects/: README.md  effects-panel.cpp  layer-effects.h
src/layers/: README.md  layer-model.h
src/obs/: README.md  plugin-main.cpp  plugin-main.h  title-source.cpp  title-source.h
src/performance/: README.md
src/rendering/: README.md  title-gpu-filter-pipeline.cpp  title-gpu-filter-pipeline.h
src/text/: README.md  title-rich-text.cpp  title-rich-text.h
src/timeline/: README.md  animation.cpp  animation.h
tests/: animation_model_test.cpp  rich_text_model_test.cpp
